fixed a few compile time warnings